<resources>
    <string name="app_name">Organizator czasu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Łukasz Mrzygłód</string>
    <string name="nav_header_subtitle">U14808 mrzygod@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">NOT YET DONE</string>

    <string name="delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="menu_home">TODO</string>
    <string name="menu_gallery">Calender</string>
    <string name="menu_slideshow">Add Event</string>
    <string name="menu_statistics">Statistics</string>
    <string name="chartName">Char title</string>
    <string name="home_third">Hello Third</string>
    <string name="contetna">Name</string>
    <string name="configure">Configure</string>
    <string name="todoDescription">Description</string>
    <string name="edytuj">Selected todo text</string>
    <string name="Title">Title</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="notification">Notification:</string>
    <string name="priority">Priority:</string>
    <string name="calender">Calender</string>
    <string name="planFor">Plan for a day</string>
    <string name="detales">Details</string>
    <string name="description">Description:</string>
    <string-array name="priority_array">
        <item>low</item>
        <item>medium</item>
        <item>high</item>
    </string-array>
    <string-array name='notification_array'>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
    </string-array>
    <string name="repeatability">Repeatability every:</string>
    <string-array name='repeatability_array'>
        <item>None</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>weekend</item>
        <item>week</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>year</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WeeklyPlan">Weekly Plan</string>s
    <string name="category">Category:</string>
    <string name="duration">Duration:</string>
    <string name="doneTasksChartTitle">Done tasks for today</string>
    <string name="freeTimePerDayChartTitle">Free time for a week</string>

</resources>
