<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.myapplication.ui.home.HomeSecondFragment"
        android:label="@string/chartName"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.calender.CalenderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.addEvent.AddEventFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_add_event" />

    <fragment
        android:id="@+id/nav_statistics2"
        android:name="com.example.myapplication.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics2" />
</navigation>