<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.editEvent.EditToDo">

    <ScrollView
        android:id="@+id/editEventFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/prioritySpinner"
                android:layout_width="181dp"
                android:layout_height="26dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationValue" />

            <TextView
                android:id="@+id/notificationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="39dp"
                android:text="Notification:"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/notificationSpinner"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priorityText" />

            <Button
                android:id="@+id/editEventButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:text="@string/Edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

            <Spinner
                android:id="@+id/notificationSpinner"
                android:layout_width="180dp"
                android:layout_height="25dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prioritySpinner" />

            <EditText
                android:id="@+id/eventNameText"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="69dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="622dp"
                android:ems="10"
                android:hint="Event name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/priorityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="308dp"
                android:text="Priority:"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="143dp"
                android:layout_height="118dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText"
                app:srcCompat="@drawable/ic_calender"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="328dp"
                android:layout_height="103dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="28dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/todoDescription"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeaterSpiner"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/addEventText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="137dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="138dp"
                android:layout_marginBottom="674dp"
                android:text="Edit Event"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/datePickButt"
                android:layout_width="55dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="136dp"
                android:src="@android:drawable/ic_menu_month"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventNameText" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="159dp"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateText" />

            <ImageButton
                android:id="@+id/timePickButt"
                android:layout_width="56dp"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="132dp"
                android:src="@android:drawable/ic_menu_recent_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datePickButt" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="160dp"
                android:layout_height="32dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toStartOf="@+id/datePickButt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventNameText" />

            <ImageButton
                android:id="@+id/addImageButton"
                android:layout_width="57dp"
                android:layout_height="58dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="131dp"
                android:src="@drawable/ic_menu_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePickButt"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="308dp"
                android:text="@string/duration"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/durationValue"
                android:layout_width="180dp"
                android:layout_height="41dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="31dp"
                android:ems="10"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinber" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="61dp"
                android:text="@string/category"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/categorySpinber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Spinner
                android:id="@+id/categorySpinber"
                android:layout_width="179dp"
                android:layout_height="28dp"
                android:layout_marginTop="74dp"
                android:layout_marginEnd="51dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addImageButton" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/repeatability"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationText" />

            <Spinner
                android:id="@+id/repeaterSpiner"
                android:layout_width="160dp"
                android:layout_height="25dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/notificationSpinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>